# lightandlight.github.io

./: .gitignore  .gitignore.txt  404.md  CNAME  README.md  TODO.txt  _config.yml  about.md  clean  cv.md  default.nix  flake.nix  gemset.nix  index.html  index.md  publish  refresh_gemset  resources.md  site.cabal  site.hs  talks.md  watch
_drafts/: 2020-06-30-sized-hkts.md  CIL-reference.md  android-reference.md  introduction-to-monad-transformers.md  learning-a-craft.md  the-interpreter-pattern.md
_includes/: footer.html  header.html  nav.html  tags-list.html
_layouts/: math-post.html  page.html  post-list.html  post.html
_posts/: 2015-01-27-long-test-post.md  2015-01-27-short-test-post.md  2015-01-27-test-post.md  2015-01-28-this-post-has-a-particularly-long-title.md  2015-02-01-introduction-to-monad-transformers.md  2015-03-04-the-programming-thought-process-fizzbuzz.md  2015-07-25-search-and-replace-in-multiple-files.md  2016-10-24-why-LINQ-is-broken.md  2017-01-07-introduction-to-unification.md  2017-03-24-how-to-delete-old-nixos-boot-configurations.md  2017-06-06-continuations-from-the-ground-up.md  2018-02-25-comonad-transformers-in-the-wild.md  2018-06-13-topsy-turvy-reverse-state.md  2018-11-19-on-programming-language-design.md  2018-11-21-on-programming-language-design.md  2018-12-29-writing.md  2019-02-11-learning-a-craft.md  2019-05-05-conditional-probabilities-obnoxious-white-guys.md  2019-05-18-agda-nixos.md  2019-07-01-lambdas-are-codatatypes.md  2020-07-07-sized-hkts.md  2020-11-07-docker-cleanup-commands.md  2021-02-06-rust-defun-example.md  (+7 more)
(+170 files in other folders)
