name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , directory
                  , filepath
                  , hakyll == 4.16.*
                  , pandoc
                  , pandoc-types
                  , text
                  , time
                  , wai-app-static
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
